# zettelkasten

./: .dockerignore  .env.example  .gitignore  Dockerfile.dev  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.claire/worktrees/determined-allen-1874dd/: docker-compose.yml
apps/api/: .env.example  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/api/src/: env.ts  index.ts  server.ts
apps/api/tests/: ask.test.ts  bibtex.test.ts  canvases.test.ts  custom-link-types.test.ts  db.test.ts  errors.test.ts  export-md.test.ts  graph.test.ts  health.test.ts  highlight-feedback.test.ts  highlights.test.ts  inbox-review.test.ts  inbox.test.ts  links.test.ts  manuscript-exports.test.ts  manuscripts.test.ts  ml.test.ts  notes.test.ts  notion-blocks.test.ts  notion-client.test.ts  notion-import.test.ts  notion-mentions.test.ts  notion-typer.test.ts  ollama-client.test.ts  pandoc.test.ts  retrain-reranker.test.ts  semantic-search.test.ts  setup.ts  sources.test.ts  spaced-review.test.ts  suggestion-feedback.test.ts  tags.test.ts  wikilinks-sync.test.ts
apps/embedding-worker/: package.json
apps/embedding-worker/src/: sync.ts  (+2 more)
apps/mirror/: package.json  tsconfig.json  vitest.config.ts
apps/ml/: README.md  pyproject.toml
apps/ml/data/: .gitignore
apps/ml/src/: classifier.py  embedder.py  main.py  reranker.py
apps/ml/tests/: test_classifier.py  test_embedder.py  test_reranker.py
apps/readwise/: package.json  tsconfig.json
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
docker/postgres/: init.sql
(+143 files in other folders)
